Aplicación de grid al main y flex a las tarjetas

--- a/index.html
+++ b/index.html
@@ -28,42 +28,33 @@
                 </ul>
             </div>
         </aside>
-        <main>
-            <div class="grid-item">
-                <div>
-                    <img src="./assets/img/alanwalker.jpeg" alt="imagen" width="200px">
-                    <div>
-                        <h3>Perfume myKingdom</h3>
-                        <p>$29.999</p>
-                    </div>
+        <main class="grid_item">
+            <div class="grid_flex_container">
+                <img src="./assets/img/alanwalker.jpeg" alt="imagen" width="200px">
+                <div class="grid_box_item_text">
+                    <h3>Perfume myKingdom</h3>
+                    <p>$29.999</p>
                 </div>
-                <div>
-                    <img src="./assets/img/alanwalker.jpeg" alt="imagen" width="200px">
-                    <div>
-                        <h3>Perfume myKingdom</h3>
-                        <p>$29.999</p>
-                    </div>
+            </div>
+            <div class="grid_flex_container">
+                <img src="./assets/img/alanwalker.jpeg" alt="imagen" width="200px">
+                <div class="grid_box_item_text">
+                    <h3>Perfume myKingdom</h3>
+                    <p>$29.999</p>
                 </div>
-                <div>
-                    <img src="./assets/img/alanwalker.jpeg" alt="imagen" width="200px">
-                    <div>
-                        <h3>Perfume myKingdom</h3>
-                        <p>$29.999</p>
-                    </div>
+            </div>
+            <div class="grid_flex_container">
+                <img src="./assets/img/alanwalker.jpeg" alt="imagen" width="200px">
+                <div class="grid_box_item_text">
+                    <h3>Perfume myKingdom</h3>
+                    <p>$29.999</p>
                 </div>
-                <div>
-                    <img src="./assets/img/alanwalker.jpeg" alt="imagen" width="200px">
-                    <div>
-                        <h3>Perfume myKingdom</h3>
-                        <p>$29.999</p>
-                    </div>
-                </div>
-                <div>
-                    <img src="./assets/img/alanwalker.jpeg" alt="imagen" width="200px">
-                    <div>
-                        <h3>Perfume myKingdom</h3>
-                        <p>$29.999</p>
-                    </div>
+            </div>
+            <div class="grid_flex_container">
+                <img src="./assets/img/alanwalker.jpeg" alt="imagen" width="200px">
+                <div class="grid_box_item_text">
+                    <h3>Perfume myKingdom</h3>
+                    <p>$29.999</p>
                 </div>
             </div>
         </main>
