Maquetación tarjetas terminada

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,45 +11,87 @@
     <link rel="icon" type="image/x-ico" href="./assets/img/ico.ico">
     <title>Document</title>
 </head>
+
 <body>
     <div class="grid_container">
         <header class="header">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis distinctio adipisci quaerat magni iure, dicta aperiam quasi aliquam non quidem, sed in ullam laborum quisquam. Quis aperiam sequi tempora quod!
+            <div class="header_title">
+                <h1 >Mi Ecommerce</h1>
+            </div>
         </header>
         <aside>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum provident quod ipsam explicabo iusto doloribus, corporis itaque sequi neque minima quasi delectus et facere est quisquam maiores distinctio, similique illo!
+
         </aside>
         <main>
             <div class="grid_container_mini">
-                
-                <div class="grid_item_mini">
-                    <div>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, et itaque? Hic voluptates, consequuntur placeat dolore, expedita est vel, ab nisi harum adipisci dignissimos? Ipsum aliquam laborum magnam adipisci facilis?
-                    </div>
-                </div>
-                <div class="grid_item_mini">
-                    <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, et itaque? Hic voluptates, consequuntur placeat dolore, expedita est vel, ab nisi harum adipisci dignissimos? Ipsum aliquam laborum magnam adipisci facilis?
-                        </div>
-                </div>
-                <div class="grid_item_mini">
-                    <div>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, et itaque? Hic voluptates, consequuntur placeat dolore, expedita est vel, ab nisi harum adipisci dignissimos? Ipsum aliquam laborum magnam adipisci facilis?
-                    </div>
-                </div>
+
                 <div class="grid_item_mini">
                     <div class="flex_container">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, et itaque? Hic voluptates, consequuntur placeat dolore, expedita est vel, ab nisi harum adipisci dignissimos? Ipsum aliquam laborum magnam adipisci facilis?
+                        <div>
+                            <img src="./assets/img/lindseystirling.jpg" alt="Lindsey Stirling Poster"
+                                class="flex_image">
                         </div>
+                        <div class="flex_item_text">
+                            <h2>Poster Lindsey Stirling</h2>
+                            <p>$13.990</p>
+                            <button class="flex_button">
+                                <a href="#">Comprar</a>
+                            </button>
+                        </div>
+                    </div>
                 </div>
 
+                <div class="grid_item_mini">
+                    <div class="flex_container">
+                        <div>
+                            <img src="./assets/img/johnwilliams.jpg" alt="John Williams Poster" class="flex_image">
+                        </div>
+                        <div class="flex_item_text">
+                            <h2>Poster John Williams</h2>
+                            <p>$13.580</p>
+                            <button class="flex_button">
+                                <a href="#">Comprar</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
 
-            </div>
+                <div class="grid_item_mini">
+                    <div class="flex_container">
+                        <div>
+                            <img src="./assets/img/thescript.jpg" alt="The Script Poster" class="flex_image">
+                        </div>
+                        <div class="flex_item_text">
+                            <h2>Poster The Script</h2>
+                            <p>$14.500</p>
+                            <button class="flex_button">
+                                <a href="#">Comprar</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="grid_item_mini">
+                    <div class="flex_container">
+                        <div>
+                            <img src="./assets/img/stevejablonsky.jpg" alt=" Steve Jablonsky Poster" class="flex_image">
+                        </div>
+                        <div class="flex_item_text">
+                            <h2>Poster Steve Jablonsky</h2>
+                            <p>$11.990</p>
+                            <button class="flex_button">
+                                <a href="#">Comprar</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
         </main>
         <footer>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias ab doloribus dolorum suscipit explicabo error, tenetur aperiam accusamus blanditiis. Quam minus ipsum nulla quo tempora consectetur ea facilis repellat ut.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias ab doloribus dolorum suscipit explicabo
+            error,
         </footer>
 
     </div>
 </body>
+
 </html>
