--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
             </div>
         </header>
         <aside>
+            <div class="list_flex_container">
+                <div>
+                <h2>Categorías</h2>
+                <ul>
+                    <li>Perfumes<span class="flex_list_color">(13)</span></li>
+                    <li>Ropa<span class="flex_list_color">(21)</span></li>
+                    <li>Accesorios<span class="flex_list_color">(41)</span></li>
+                    <li>Zapatos<span class="flex_list_color">10</span></li>
+                </ul>
+                </div>
+            </div>
 
         </aside>
         <main>
@@ -87,8 +98,7 @@
                 </div>
         </main>
         <footer>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias ab doloribus dolorum suscipit explicabo
-            error,
+            <p>@Miecommerce</p>
         </footer>
 
     </div>
